# live-capture

./: .gitignore  CMakeLists.txt  README.md
buid/: CMakeCache.txt  Makefile  cmake_install.cmake  live-capture
buid/src/: Makefile  cmake_install.cmake
buid/src/io/: Makefile  cmake_install.cmake
buid/src/packet/: Makefile  cmake_install.cmake
example/: a.out  bug-test.cpp  capture  every-ic.cpp  mt.cpp  nprint-ml-tutorial.ipynb  test  test.cpp
include/: call_python.hpp  cli_util.hpp  common.hpp  common_macros.hpp  config.hpp  constants.hpp  stats.hpp
include/callback/: cb_hash_partitioner.hpp  cb_producer_delivery_report.hpp  cb_producer_event.hpp  hash_partitioner_cb.hpp  producer_delivery_report_cb.hpp  producer_event_cb.hpp
include/headers/: ethernet_header.hpp  icmp_header.hpp  ipv4_header.hpp  ipv6_header.hpp  packet_header.hpp  payload.hpp  superpacket.hpp  tcp_header.hpp  udp_header.hpp
include/io/: cb_hash_partitioner.hpp  cb_producer_delivery_report.hpp  cb_producer_event.hpp  config_loader.hpp  daily_logger.hpp  file_writer.hpp  io_parser.hpp  kafka_producer.hpp  nprint_parser.hpp  pcap_parser.hpp  stringfile_parser.hpp  torch_api.hpp
include/packet/: ethernet_header.hpp  icmp_header.hpp  ipv4_header.hpp  ipv6_header.hpp  packet_header.hpp  payload.hpp  radiotap_header.hpp  superpacket.hpp  tcp_header.hpp  udp_header.hpp  wlan_header.hpp
include/packet/header/: ethernet_header.hpp
logs/error/: log_2023-05-15.txt
logs/info/: log_2023-05-15.txt
model/: config.properties  damn.py
src/: CMakeLists.txt  call_python.cpp  config.cpp  main.cpp  stats.cpp
src/callback/: CMakeLists.txt  cb_hash_partitioner.cpp  cb_producer_delivery_report.cpp  cb_producer_event.cpp  hash_partitioner_cb.cpp  producer_delivery_report_cb.cpp  producer_event_cb.cpp
src/headers/: CMakeLists.txt  ethernet_header.cpp  icmp_header.cpp  ipv4_header.cpp  ipv6_header.cpp  packet_header.cpp  payload.cpp  superpacket.cpp  tcp_header.cpp  udp_header.cpp
src/io/: CMakeLists.txt  cb_hash_partitioner.cpp  cb_producer_delivery_report.cpp  cb_producer_event.cpp  config_loader.cpp  daily_logger.cpp  file_writer.cpp  io_parser.cpp  kafka_producer.cpp  nprint_parser.cpp  pcap_parser.cpp  stringfile_parser.cpp  torch_api.cpp
src/packet/: CMakeLists.txt  ethernet_header.cpp  icmp_header.cpp  ipv4_header.cpp  ipv6_header.cpp  packet_header.cpp  payload.cpp  radiotap_header.cpp  superpacket.cpp  tcp_header.cpp  udp_header.cpp  wlan_header.cpp
